istio/kuma-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: kuma-gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    hostname: "kuma.page.local"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
