istio/kuma-gateway-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: kuma-route
spec:
  parentRefs:
  - name: kuma-gateway
  hostnames: ["kuma.page.local"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kuma-service
      port: 80
